--- a/about.html
+++ b/about.html
@@ -50,6 +50,11 @@
       </ul>
     
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
+    </div> 
     </div> 
   </nav>
   <header class="ourstoryHeader">
@@ -65,22 +70,22 @@
     </div>
     <p>Loading...</p>
   </div>
-      </section> <div id="main-content" > <section class="ourStory">
-        <div class="container">
-        <div class=" flex story pt-5 gap-4">
-          <div >
-          <h2>The Story of Sunbula </h2>
- <p class="pStory">In the fertile valleys of Jenin, where golden wheat sways with the breeze and the land whispers stories of generations past, the seed of Sunbula was planted.
-Legend tells of a wise village woman who sat beneath an old olive tree, stitching her dress with care. When a curious child asked what she was making, she replied, "I’m not just sewing fabric — I’m stitching memory, preserving a story, and shaping the future."
-These words became the spark of inspiration. A group of women, bound by love for their heritage and a desire for change, began gathering — not in studios or workshops, but in kitchens and courtyards. With every embroidered thread and hand-felted shape, they poured in their stories, resilience, and dreams.
-What began as a humble gathering blossomed into Sunbula — a platform not only for handcrafted art but for the voices behind it. Today, Sunbula celebrates Palestinian tradition, empowers women, and connects timeless crafts with the world.</p>
-</div>
-  <div class="col-lg-3 col-md-6 col-sm-12">
-<img src="assets/images/story.jpeg"  class="story" alt="">   
-</div>  
-</div>
-</div>
-      </section></div> 
+      </section> <div id="main-content" >
+      <section class="storySection m-5">
+  <div class="storyText">
+    <h2>The Story of Sunbula</h2>
+    <p>
+      In the fertile valleys of Jenin, where golden wheat sways with the breeze and the land whispers stories of generations past, the seed of Sunbula was planted.<br><br>
+      Legend tells of a wise village woman who sat beneath an old olive tree, stitching her dress with care. When a curious child asked what she was making, she replied, "I’m not just sewing fabric — I’m stitching memory, preserving a story, and shaping the future."<br><br>
+      These words became the spark of inspiration. A group of women, bound by love for their heritage and a desire for change, began gathering — not in studios or workshops, but in kitchens and courtyards. With every embroidered thread and hand-felted shape, they poured in their stories, resilience, and dreams.<br><br>
+      What began as a humble gathering blossomed into Sunbula — a platform not only for handcrafted art but for the voices behind it. Today, Sunbula celebrates Palestinian tradition, empowers women, and connects timeless crafts with the world.
+    </p>
+  </div>
+  <img src="assets/images/story.jpeg" class="storyImg" alt="Traditional Palestinian artisan working">
+</section>
+
+
+    </div>  
   
   </main>
    <footer class="Footer">
