--- a/clothing.html
+++ b/clothing.html
@@ -50,6 +50,11 @@
       </ul>
     
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
+    </div> 
     </div> 
   </nav>
    <header class="clothingHeader">
@@ -63,7 +68,8 @@
     </div>
     <p>Loading...</p>
   </div>
-      </section> <div id="main-content" >   <section class="clothingPage py-5 ">
+      </section> <div id="main-content" >  
+         <section class="clothingPage py-5 ">
     <div class="container my-4">
     <div class="row justify-content-center gy-4">
 
