--- a/decor.html
+++ b/decor.html
@@ -50,6 +50,11 @@
       </ul>
     
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
+    </div> 
     </div> 
   </nav>
   <header class="kidsHeader">
@@ -58,13 +63,14 @@
   </header>
    <main>
     <section>
-          <div id="loading">
+          <!-- <div id="loading">
     <div class="spinner-border" role="status" >
       <span class="visually-hidden">Loading</span>
     </div>
     <p>Loading...</p>
-  </div>
-      </section> <div id="main-content" >    <section class="decorSection">
+  </div> -->
+      <!-- </section> <div id="main-content" >     -->
+        <section class="decorSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
@@ -80,7 +86,7 @@
         <div class="product-card">
             <img src="assets/images/decor2.jpeg" alt="..">
           <h5 class="product-name">Wooden/Ceramic Kariya Keyholder</h5>
-          <p class="producer">Hand-painted tiles with 'kariya' (village) scenery of Gaza. Wooden frame with hook on the back for hanging on the wall.</p>
+          <p class="producer">Hand-painted tile featuring Gaza village scenery. Comes in a wooden frame with a wall hook.</p>
             <p class="price">$21</p>
           <button class="btn">Add to cart</button>
         </div></div>
@@ -88,7 +94,7 @@
         <div class="product-card">
             <img src="assets/images/decor3.jpeg" alt="..">
           <h5 class="product-name">Miniature Arabesque Mirror </h5>
-          <p class="producer">Arabesque patterns are intricately hand-carved on this wooden mirror by artisans from Gaza. Hanging hook on the back.</p>
+          <p class="producer">Wooden mirror hand-carved with arabesque patterns by Gaza artisans. Includes hanging hook.</p>
             <p class="price">$24</p>
           <button class="btn">Add to cart</button>
         </div></div>
@@ -96,12 +102,13 @@
         <div class="product-card">
             <img src="assets/images/decor4.jpeg" alt="..">
           <h5 class="product-name">Mirror with Three Arabesque Tiles</h5>
-          <p class="producer">Hand-painted arabesque tiles adorn this beautiful mirror, made by artisans of Gaza. Hanging hook on the back.</p>
+          <p class="producer">Hand-painted arabesque tiles adorn this beautiful mirror, made by artisans of Gaza.</p>
             <p class="price">$16</p>
           <button class="btn"> Add to cart</button>
         </div></div>
         </div></div>
-        </section>   </div> 
+        </section>  
+       <!-- </div>  -->
     
     </main>
      <footer class="Footer">
