--- a/gifts.html
+++ b/gifts.html
@@ -50,21 +50,18 @@
       </ul>
     
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
+    </div> 
     </div> 
   </nav>
     <header class="kidsHeader">
         <h1 class=" text-center mb-4">GIFTS</h1>
         <p class="text-center">Looking for a handmade gift from Palestine? From books on Palestinian tatreez embroidery to handcrafted Christmas greeting<br> cards,explore our selection of handmade gifts by our artisans in Palestine. Showcasing traditional Palestinian embroidery and<br> paper-making techniques, there is nothing better than gifting your loved ones with the beauty and wonders of Palestine.</p>
     </header>
-    <main>
-      <section>
-          <div id="loading">
-    <div class="spinner-border" role="status" >
-      <span class="visually-hidden">Loading</span>
-    </div>
-    <p>Loading...</p>
-  </div>
-      <div id="main-content" >      
+    <main> 
         <section class="gifts">
             <div class="container my-4">
             <div class="row justify-content-center gy-4">
@@ -101,9 +98,7 @@
         </div></div>
 
         </section>
-      
-      </div> 
-       </section>
+
    
     </main>
      <footer class="Footer">
