--- a/handbags.html
+++ b/handbags.html
@@ -50,19 +50,27 @@
       </ul>
     
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
+    </div> 
     </div> 
   </nav>
   <header class="kidsHeader">
     <h1 class="mb-3 text-center">Handbags</h1>
   </header>
-   <main> <section>
+   <main> 
+    <!-- <section>
           <div id="loading">
     <div class="spinner-border" role="status" >
       <span class="visually-hidden">Loading</span>
     </div>
     <p>Loading...</p>
   </div>
-      </section> <div id="main-content" >  <section class="decorSection">
+      </section> 
+      <div id="main-content" >   -->
+        <section class="decorSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
@@ -70,7 +78,7 @@
         <div class="product-card">
             <img src="assets/images/bag3.jpeg" alt="..">
           <h5 class="product-name">Summer Handbag</h5>
-        <p class="producer">Sampler of popular embroidery motif adorns this pretty handbag. Wooden handles are handcrafted by local artisans in Bethlehem. Zipper closure, pockets inside.</p>
+        <p class="producer">Embroidered handbag with Bethlehem-made wooden handles, zipper closure, and inner pockets.</p>
           <p class="price">$ 49</p>
           <button class="btn">Add to cart</button>
         </div></div>
@@ -78,7 +86,7 @@
         <div class="product-card">
             <img src="assets/images/bag4.jpeg" alt="..">
           <h5 class="product-name">Summer Handbag</h5>
-          <p class="producer ">Sampler of popular embroidery motif adorns this pretty handbag. Wooden handles are handcrafted by local artisans in Bethlehem. Zipper closure, pockets inside.</p>
+          <p class="producer ">Embroidered handbag with Bethlehem-made wooden handles, zipper closure, and inner pockets.</p>
             <p class="price">$49</p>
            <button class="btn">Add to cart</button>
         </div></div>
@@ -86,7 +94,7 @@
         <div class="product-card">
             <img src="assets/images/bag.jpeg" alt="..">
           <h5 class="product-name">Floral Handbag</h5>
-          <p class="producer">Handcrafted embroidered handbag with floral motifs on a beige base, made by women in Idna with wooden handles from Bethlehem. Features inner pockets and a magnetic closure.</p>
+          <p class="producer">Floral embroidered handbag from Idna with wooden handles, inner pockets, and magnetic closure.</p>
             <p class="price">$45</p>
            <button class="btn">Add to cart</button>
         </div></div>
@@ -94,12 +102,13 @@
         <div class="product-card">
             <img src="assets/images/bag5.jpeg" alt="..">
           <h5 class="product-name">Floral Handbag</h5>
-          <p class="producer">Hand-embroidered red handbag with delicate floral motifs, made by women in Idna with wooden handles from Bethlehem. Includes lined pockets and a magnetic closure</p>
+          <p class="producer">Floral embroidered handbag from Idna with wooden handles, inner pockets, and magnetic closure.</p>
             <p class="price">$45</p>
            <button class="btn">Add to cart</button>
         </div></div>
         </div></div>
-        </section></div> 
+        </section>
+      <!-- </div>  -->
       
     </main>
      <footer class="Footer">
