--- a/kids&babies.html
+++ b/kids&babies.html
@@ -50,6 +50,11 @@
       </ul>
     
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
+    </div> 
     </div> 
   </nav>
 <header class="kidsHeader">
