--- a/olive oil soap.html
+++ b/olive oil soap.html
@@ -50,6 +50,11 @@
       </ul>
     
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
+    </div> 
     </div> 
   </nav>
   <header class="kidsHeader">
@@ -65,7 +70,7 @@
         <div class="product-card">
             <img src="assets/images/soap1.jpeg" alt="..">
           <h5 class="product-name">Olive Oil soap with Laurel</h5>
-        <p class="producer">This all-natural soap is handmade by the women farmers of Beita village with harvests from their land. Laurel has cleansing and purifying effects on the skin. Ingredients: olive oil, laurel, water, sodium hydroxide, Unscented. Suitable for face and body.</p>
+        <p class="producer">Natural soap from Beita, made with olive oil and laurel. Unscented, for face and body.</p>
           <p class="price">$5</p>
              <button class="btn"> Add to cart</button>
         </div></div>
@@ -73,8 +78,7 @@
         <div class="product-card">
             <img src="assets/images/soap2.jpeg" alt="..">
           <h5 class="product-name">Olive Oil Soap with Honey</h5>
-        <p class="producer">This all-natural Palestinian olive oil soap is handmade by the women farmers of Beita village, Palestine, with harvests from their land. Honey has moisturizing effects on the skin.
-Ingredients: olive oil, honey, water, sodium hydroxide, Unscented, and suitable for face and body.</p>
+        <p class="producer">Natural soap from Beita, made with olive oil and laurel. Unscented, for face and body.</p>
           <p class="price">$5</p>
              <button class="btn"> Add to cart</button>
         </div></div>
@@ -82,7 +86,7 @@ Ingredients: olive oil, honey, water, sodium hydroxide, Unscented, and suitable 
         <div class="product-card">
             <img src="assets/images/soap3.jpeg" alt="..">
           <h5 class="product-name">Sebastiya Olive Oil Soap</h5>
-        <p class="producer">This soap is handmade by women from Sebastiya village in the northern West Bank, using olive oil from the harvest from their own land. With no chemical additives, it is mild, moisturizing, and suited to all skin types.</p>
+        <p class="producer"> Natural soap from Beita, made with olive oil and laurel. Unscented, for face and body.</p>
           <p class="price">$5</p>
              <button class="btn"> Add to cart</button>
     
@@ -91,7 +95,7 @@ Ingredients: olive oil, honey, water, sodium hydroxide, Unscented, and suitable 
         <div class="product-card">
             <img src="assets/images/soap5.jpeg" alt="..">
           <h5 class="product-name">Felt-wrapped Olive Oil Soap</h5>
-        <p class="producer">Soak and scrub with this gently exfoliating bar of olive oil soap wrapped in natural wool. Wool helps soap last longer, and can replace washcloth in the shower.</p>
+        <p class="producer">Olive oil soap wrapped in wool for gentle exfoliation and longer use, no washcloth needed.</p>
           <p class="price">$7</p>
     <button class="btn"> Add to cart</button>
         </div></div>
