--- a/books & bookmarks.html
+++ b/books & bookmarks.html
@@ -50,22 +50,19 @@
       </ul>
     
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
+    </div> 
     </div> 
   </nav>
   <header class="kidsHeader">
     <h1 class="mb-3 text-center">Book & Bookmarks</h1>
     <p class="text-center">Explore our range of beautiful hand stitched bookmarks and books on Palestinian embroidery.<br> From embroidery techniques to the history of embroidery in Palestine.</p>
   </header>
-   <main>
-    <section>
-          <div id="loading">
-    <div class="spinner-border" role="status" >
-      <span class="visually-hidden">Loading</span>
-    </div>
-    <p>Loading...</p>
-  </div>
-      </section> <div id="main-content" >  
-            <section class="decorSection">
+   <main>  
+            <section class="bookSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
@@ -118,7 +115,7 @@
              <button class="btn"> Add to cart</button>
         </div></div>
         </div></div>
-        </section>   </div> 
+        </section>  
     
     </main>
      <footer class="Footer">
