--- a/cart.html
+++ b/cart.html
@@ -3,19 +3,20 @@
 <head>
  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cart</title>
-    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+    <title>Sunbula Store</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <section id="cart" class="container my-5">
-  <h2>Your Cart</h2>
+  <h2>Your Cart :</h2>
   <div id="cart-items" class="row gy-3"></div>
   <div class="text-end mt-4">
     <p>Total Items: <span id="total-items">0</span></p>
     <p>Total Price: $<span id="total-price">0.00</span></p>
   </div>
 </section>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <script src="assets/js/javascript.js"></script>
 </body>
 </html>
