--- a/cheakout.html
+++ b/cheakout.html
@@ -10,48 +10,75 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+ <body>
+<main>
+  <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section> <div id="main-content" > 
+  <section class="cheakout">
+  <div class="container">
+    <a href="index.html"><img src="assets/images/logo.png" alt="logo" class="logo"></a>
 
-<body>
-<header class="headercheckout ">
-    <div class="logo-container">
-        <a href="index.html"><img src="assets/images/logo.png" alt="" class="logo"></a>
+  <form class="checkout-form"   id="checkoutForm"  novalidate>
+      <h2>Contact Information</h2>
+      <h3 class="fs-4 mt-3">Already have an account? <a href="#login">Login</a></h3>
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Enter your email" required>
+       <div class="error-message" id="email-error"></div>
+
+      <div class="checkbox">
+        <input type="checkbox" id="offers" >
+        <label for="offers">Keep me up to date on news and exclusive offers</label>
+      </div>
+
+      <h2 class="mt-3">Shipping Address</h2>
+      <label for="title">Title</label>
+      <select id="title">
+        <option>Title</option>
+        <option>Mr.</option>
+        <option>Mrs.</option>
+        <option>Ms.</option>
+      </select>
+
+      <div class="name-fields">
+        <div>
+          <label for="first-name">First name</label>
+          <input type="text" id="first-name"   placeholder="First-name" required>
+           <div class="error-message" id="Firstname-error"></div>
         </div>
-    </header>
-    <main>
-<section class="">
-    
-   <form action=""class="  text-light text-center p-5 d-flex flex-column">
-    <h1 class="mb-4 ">DELIVERY</h1>
-    <label for="" class=" px-5 fs-2"> Enter Your Region </label>
-<input type="text" class="p-2 text-center ">
-  <label for="" class=" px-5 fs-2"> Enter Your Full Name</label>
-<input type="text" class="p-2 text-center ">
- <label for="" class=" px-5 fs-2"> Enter Your title </label>
-<input type="text" class="p-2 text-center ">
-<input type="submit" class="mt-3" value="submit">
-   </form>
-   </section>
-   <section class="mt-4">
-         <h1 class="text-center text-light"> Delivery information and prices for all areas</h1>
- <div class="d-flex justify-content-center align-items-center">
-   
-<div class="card p-5 mt-2" style="width: 30rem;">
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item fw-bold">Delivery to West Bank areas 20NIS</li>
-    <li class="list-group-item fw-bold"> Delivery to the occupied territories 70NIS</li>
-    <li class="list-group-item fw-bold">  Delivery to Jerusalem areas 30</li>
-   
-  </ul>
-</div>
- </div>
-</section>
-    </main>
+        <div>
+          <label for="last-name">Last name</label>
+          <input type="text" id="last-name"   placeholder="Last-name" required>
+        </div>
+      </div>
+       <label for="Address">Address</label>
+      <input type="text" id="address"   placeholder="Address" class="mt-3" required>
+       <div class="error-message" id="lastname-error"></div>
 
-    
+        <label for="title">Region</label>
+      <select id="title" required>
+        <option>Region/country</option>
+        <option>Palestine</option>
+        <option> Jordan</option>
+        <option>Other country's</option>
+      </select>
+        <label for="City">City</label>
+          <input type="text" id="City"   placeholder="City" required >
+           <div class="error-message" id="city-error"></div>
 
-
-
-
+  <button type="submit" class="btn ">Submit</button>
+ 
+    </form>
+    <a href="index.html"><button class="btn mt-4 mb-4">Continue to Shopping</button></a>
+  </div>
+  </section>
+  </div>
+</main>
 </body>
   <script src="assets/js/javascript.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
