--- a/home&kitchin.html
+++ b/home&kitchin.html
@@ -50,6 +50,11 @@
       </ul>
     
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
+    </div> 
     </div> 
   </nav>
     <header class="kidsHeader">
@@ -60,14 +65,7 @@
              Palestinian culture in your home.</p>
     </header>
     <main>
-  <section>
-          <div id="loading">
-    <div class="spinner-border" role="status" >
-      <span class="visually-hidden">Loading</span>
-    </div>
-    <p>Loading...</p>
-  </div>
-      </section> <div id="main-content" >       <section>
+ <section>
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
@@ -95,7 +93,7 @@
         
         </div></div>
 
-        </section>    </div> 
+        </section>   
    
     </main>
      <footer class="Footer">
