--- a/kitchin.html
+++ b/kitchin.html
@@ -50,6 +50,11 @@
       </ul>
     
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
+    </div> 
     </div> 
   </nav>
   <header class="kidsHeader">
@@ -58,14 +63,15 @@
          Uniquely Palestiinian olive wood utensils, hand towels, and more. Explore our range.</p>
   </header>
    <main>
-    <section>
+    <!-- <section>
           <div id="loading">
     <div class="spinner-border" role="status" >
       <span class="visually-hidden">Loading</span>
     </div>
     <p>Loading...</p>
   </div>
-      </section> <div id="main-content" >    <section class="decorSection">
+      </section> <div id="main-content" >   -->
+          <section class="decorSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
@@ -73,7 +79,7 @@
         <div class="product-card">
             <img src="assets/images/kitchin1.jpeg" alt="..">
           <h5 class="product-name">Dish Towel - Keffiyeh</h5>
-        <p class="producer">Bring a piece of Palestine to your kitchen with our new dish towel, handmade by young mothers from the Anata Bedouin community just outside Jerusalem. Cotton-blend waffle fabric with a hanging strap on the back.</p>
+        <p class="producer">Cotton-blend dish towel handmade in Anata near Jerusalem, with waffle texture and hanging strap.</p>
           <p class="price">$5</p>
           <button class="btn">Add to cart</button>
         </div></div>
@@ -81,15 +87,14 @@
         <div class="product-card">
             <img src="assets/images/kitchin2.jpeg" alt="..">
           <h5 class="product-name">Olive-wood Spoon Set</h5>
-          <p class="producer ">A set of 3 spoons hand-crafted from olive wood from Bethlehem made with traditional olive wood carving techniques
-Large: 10 (in) | 26 (cm). Medium: 8 (in) | 20 (cm), Small: 6 (in) | 16 (cm).</p>
+          <p class="producer ">Set of 3 olive wood spoons hand-carved in Bethlehem using traditional techniques. Sizes: 10in, 8in, 6in.</p>
             <p class="price">$10</p>
            <button class="btn">Add to cart</button>
         </div></div>
            <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
             <img src="assets/images/kitchin3.jpeg" alt="..">
-          <h5 class="product-name"> Embroidered Potholders - Surif</h5>
+          <h5 class="product-name">Surif Potholders</h5>
           <p class="producer">A pair of practical, pretty potholders embroidered with the traditional patterns from Surif village. 100% cotton.</p>
             <p class="price">$13</p>
            <button class="btn">Add to cart</button>
@@ -98,12 +103,13 @@ Large: 10 (in) | 26 (cm). Medium: 8 (in) | 20 (cm), Small: 6 (in) | 16 (cm).</p>
         <div class="product-card">
             <img src="assets/images/kittchin4.jpeg" alt="..">
           <h5 class="product-name">Olive-wood Honey Spoon</h5>
-          <p class="producer">Handcrafted from local olive wood from Bethlehem area.</p>
+          <p class="producer">Handcrafted from local olive wood from Bethlehem, celebrating Palestinian tradition and craftsmanship.</p>
             <p class="price">$3</p>
-           <button class="btn">Add to cart</button>
+           <button class="btn ">Add to cart</button>
         </div></div>
         </div></div>
-        </section>  </div>
+        </section> 
+       <!-- </div> -->
       
     </main>
      <footer class="Footer">
