--- a/shoulderbags.html
+++ b/shoulderbags.html
@@ -50,20 +50,26 @@
       </ul>
     
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
+    </div> 
     </div> 
   </nav>
   <header class="kidsHeader">
     <h1 class="mb-3 text-center">Shoulder Bags</h1>
   </header>
    <main>
-    <section>
+    <!-- <section>
           <div id="loading">
     <div class="spinner-border" role="status" >
       <span class="visually-hidden">Loading</span>
     </div>
     <p>Loading...</p>
   </div>
-      </section> <div id="main-content" >     <section class="decorSection">
+      </section> <div id="main-content" >   -->
+           <section class="decorSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
@@ -71,7 +77,7 @@
         <div class="product-card">
             <img src="assets/images/bag6.jpeg" alt="..">
           <h5 class="product-name">Cross-stitch Sacoche</h5>
-        <p class="producer">This versatile sacoche bag can be worn as a crossbody, shoulder purse, or clutch by adjusting or removing the strap. It features a zipped back pocket and a lined interior.</p>
+        <p class="producer">This versatile sacoche bag can be worn as a crossbody, shoulder purse, or clutch by adjusting or removing the strap.</p>
           <p class="price">$33</p>
           <button class="btn">Add to cart</button>
         </div></div>
@@ -79,7 +85,7 @@
         <div class="product-card">
             <img src="assets/images/bag7.jpeg" alt="..">
           <h5 class="product-name">Floral Sacoche</h5>
-          <p class="producer ">This versatile sacoche bag can be worn as a crossbody, shoulder purse, or clutch by adjusting or removing the strap. It features a zipped back pocket and a lined interior.</p>
+          <p class="producer ">This versatile sacoche bag can be worn as a crossbody, shoulder purse, or clutch by adjusting or removing the strap.</p>
             <p class="price">$33</p>
            <button class="btn">Add to cart</button>
         </div></div>
@@ -87,7 +93,7 @@
         <div class="product-card">
             <img src="assets/images/bag8.jpeg" alt="..">
           <h5 class="product-name">Bucket Shoulder Bag</h5>
-          <p class="producer">Beautifully embroidered canvas bag showcasing women's craftsmanship. Features a center velcro pocket, 2 side slip pockets, cotton lining with a zippered pocket, and magnetic closure.</p>
+          <p class="producer">Embroidered canvas bag highlighting women’s craftsmanship. Includes velcro and slip pockets, and magnetic closure.</p>
             <p class="price">$42</p>
            <button class="btn">Add to cart</button>
         </div></div>
@@ -95,12 +101,13 @@
         <div class="product-card">
             <img src="assets/images/bag9.jpeg" alt="..">
           <h5 class="product-name">Bucket Shoulder Bag</h5>
-          <p class="producer">Beautifully embroidered canvas bag showcasing women's craftsmanship. Features a center velcro pocket, 2 side slip pockets, cotton lining with a zippered pocket, and magnetic closure.</p>
+          <p class="producer">Embroidered canvas bag highlighting women’s craftsmanship. Includes velcro and slip pockets, and magnetic closure.</p>
             <p class="price">$42</p>
            <button class="btn">Add to cart</button>
         </div></div>
         </div></div>
-        </section>  </div>
+        </section>  
+      <!-- </div> -->
     
     </main>
      <footer class="Footer">
