--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
           <div class="lineNav ms-3 me-3"></div>
     
          <li class="nav-item mx-2">
-          <a class="nav-link text-danger " href="Clothing.html">Clothing</a>
+          <a class="nav-link text-danger " href="clothing.html">Clothing</a>
         </li>
         <li class="nav-item mx-2">
           <a class="nav-link text-danger" href="bags.html">Bags&Accessoies</a>
         </li>
        <li class="nav-item mx-2">
-          <a class="nav-link text-danger " href="Home&Kitchin.html">Home&Kitchin</a>
+          <a class="nav-link text-danger " href="home&kitchin.html">Home&Kitchin</a>
         </li>
         
         </li>
